test/shouldnt-compile/implicit-bool-conv.cpp
#include "common.hpp"


void f(bool) {}


void check() {
  Enums es;
  f(es);
}
